@@ -1433,6 +1433,10 @@ id|page
 op_star
 id|page
 suffix:semicolon
+id|ntfs_inode
+op_star
+id|ni
+suffix:semicolon
 id|mark_buffer_uptodate
 c_func
 (paren
@@ -1441,17 +1445,178 @@ comma
 id|uptodate
 )paren
 suffix:semicolon
-multiline_comment|/* This is a temporary buffer used for page I/O. */
 id|page
 op_assign
 id|bh-&gt;b_page
 suffix:semicolon
+id|ni
+op_assign
+id|NTFS_I
+c_func
+(paren
+id|page-&gt;mapping-&gt;host
+)paren
+suffix:semicolon
 r_if
 c_cond
 (paren
-op_logical_neg
+id|likely
+c_func
+(paren
 id|uptodate
 )paren
+)paren
+(brace
+multiline_comment|/*&n;&t;&t; * The below code is very cpu intensive so we add an extra&n;&t;&t; * check to ensure it is only run when processing buffer heads&n;&t;&t; * in pages reaching beyond the initialized data size.&n;&t;&t; */
+r_if
+c_cond
+(paren
+(paren
+id|page-&gt;index
+op_plus
+l_int|1
+)paren
+op_lshift
+id|PAGE_CACHE_SHIFT
+OG
+id|ni-&gt;initialized_size
+)paren
+(brace
+id|s64
+id|file_ofs
+suffix:semicolon
+r_char
+op_star
+id|addr
+suffix:semicolon
+r_int
+id|page_ofs
+suffix:semicolon
+id|addr
+op_assign
+id|kmap_atomic
+c_func
+(paren
+id|page
+comma
+id|KM_BIO_IRQ
+)paren
+suffix:semicolon
+id|BUG_ON
+c_func
+(paren
+id|bh-&gt;b_data
+OL
+id|addr
+)paren
+suffix:semicolon
+id|BUG_ON
+c_func
+(paren
+id|bh-&gt;b_data
+op_plus
+id|bh-&gt;b_size
+OG
+id|addr
+op_plus
+id|PAGE_CACHE_SIZE
+)paren
+suffix:semicolon
+id|page_ofs
+op_assign
+id|bh-&gt;b_data
+op_minus
+id|addr
+suffix:semicolon
+id|file_ofs
+op_assign
+(paren
+id|page-&gt;index
+op_lshift
+id|PAGE_CACHE_SHIFT
+)paren
+op_plus
+id|page_ofs
+suffix:semicolon
+multiline_comment|/* Check for the current buffer head overflowing. */
+r_if
+c_cond
+(paren
+id|file_ofs
+op_plus
+id|bh-&gt;b_size
+OG
+id|ni-&gt;initialized_size
+)paren
+(brace
+r_int
+id|bh_ofs
+op_assign
+l_int|0
+suffix:semicolon
+r_if
+c_cond
+(paren
+id|file_ofs
+OL
+id|ni-&gt;initialized_size
+)paren
+(brace
+id|bh_ofs
+op_assign
+id|ni-&gt;initialized_size
+op_minus
+id|file_ofs
+suffix:semicolon
+id|BUG_ON
+c_func
+(paren
+id|bh_ofs
+OL
+l_int|0
+)paren
+suffix:semicolon
+id|BUG_ON
+c_func
+(paren
+id|bh_ofs
+op_ge
+id|bh-&gt;b_size
+)paren
+suffix:semicolon
+)brace
+id|memset
+c_func
+(paren
+id|bh-&gt;b_data
+op_plus
+id|bh_ofs
+comma
+l_int|0
+comma
+id|bh-&gt;b_size
+op_minus
+id|bh_ofs
+)paren
+suffix:semicolon
+id|flush_dcache_page
+c_func
+(paren
+id|page
+)paren
+suffix:semicolon
+)brace
+id|kunmap_atomic
+c_func
+(paren
+id|addr
+comma
+id|KM_BIO_IRQ
+)paren
+suffix:semicolon
+)brace
+)brace
+r_else
 id|SetPageError
 c_func
 (paren
@@ -1555,16 +1720,6 @@ l_int|0
 suffix:semicolon
 id|u32
 id|rec_size
-suffix:semicolon
-id|ntfs_inode
-op_star
-id|ni
-op_assign
-id|NTFS_I
-c_func
-(paren
-id|page-&gt;mapping-&gt;host
-)paren
 suffix:semicolon
 id|addr
 op_assign
@@ -1673,6 +1828,12 @@ id|i
 )paren
 suffix:semicolon
 )brace
+id|flush_dcache_page
+c_func
+(paren
+id|page
+)paren
+suffix:semicolon
 id|kunmap_atomic
 c_func
 (paren
