@@ -479,7 +479,7 @@ r_return
 l_int|0
 suffix:semicolon
 )brace
-multiline_comment|/**&n; * ntfs_mft_readpage - read a page of the data attribute of $MFT&n; * @file:&t;open file to which the page @page belongs or NULL&n; * @page:&t;page cache page to fill with data&n; *&n; * Readpage method for the VFS address space operations.&n; *&n; * ntfs_mft_readpage() reads the page specified by @page and returns 0 on&n; * success or -EIO on error.&n; *&n; * Note, we only setup asynchronous I/O on the page and return. I/O completion&n; * is signalled via our asynchronous I/O completion handler&n; * end_buffer_read_index_async().&n; */
+multiline_comment|/**&n; * ntfs_mft_readpage - read a page of the data attribute of $MFT&n; * @file:&t;open file to which the page @page belongs or NULL&n; * @page:&t;page cache page to fill with data&n; *&n; * Readpage method for the VFS address space operations.&n; *&n; * ntfs_mft_readpage() reads the page specified by @page and returns 0 on&n; * success or -EIO on error.&n; *&n; * Note, we only setup asynchronous I/O on the page and return. I/O completion&n; * is signalled via our asynchronous I/O completion handler&n; * end_buffer_read_index_async(). We also take care of the nitty gritty&n; * details towards the end of the file and zero out non-initialized regions.&n; *&n; * TODO:/FIXME: The current implementation is simple but wasteful as we perform&n; * actual i/o from disk for all data up to allocated size completely ignoring&n; * the fact that initialized size, and data size for that matter, may well be&n; * lower and hence there is no point in reading them in. We can just zero the&n; * page range, which is what is currently done in our async i/o completion&n; * handler anyway once the read from disk completes. However, I am not sure how&n; * to setup the buffer heads in that case, so for now we do the pointless i/o.&n; * Any help with this would be appreciated...&n; */
 DECL|function|ntfs_mft_readpage
 r_static
 r_int
